src/test/ui/feature-gates/feature-gate-is_sorted.stderr
error[E0658]: use of unstable library feature 'is_sorted': new API (see issue #53485)
  --> $DIR/feature-gate-is_sorted.rs:3:33
   |
LL |     assert!([1, 2, 2, 9].iter().is_sorted());
   |                                 ^^^^^^^^^
   |
   = help: add #![feature(is_sorted)] to the crate attributes to enable

error[E0658]: use of unstable library feature 'is_sorted': new API (see issue #53485)
  --> $DIR/feature-gate-is_sorted.rs:5:39
   |
LL |     assert!(![-2i32, -1, 0, 3].iter().is_sorted_by_key(|n| n.abs()));
   |                                       ^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(is_sorted)] to the crate attributes to enable

error[E0658]: use of unstable library feature 'is_sorted': new API (see issue #53485)
  --> $DIR/feature-gate-is_sorted.rs:9:26
   |
LL |     assert!([1, 2, 2, 9].is_sorted());
   |                          ^^^^^^^^^
   |
   = help: add #![feature(is_sorted)] to the crate attributes to enable

error[E0658]: use of unstable library feature 'is_sorted': new API (see issue #53485)
  --> $DIR/feature-gate-is_sorted.rs:11:32
   |
LL |     assert!(![-2i32, -1, 0, 3].is_sorted_by_key(|n| n.abs()));
   |                                ^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(is_sorted)] to the crate attributes to enable

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0658`.
